# Prometeus.1.0

./: .gitignore  COMPILACAO_NUITKA.md  README.md  main.py  pyproject.toml
.gemini/: architecture.md  architecture0.1.md  styleguide.md
.qwen/direitivas/: ui.md
.qwen/memory/: REGRAS_CRITICAS.md
App.Gemco/AlCusto/: AltCust.py  log_automacao.txt
App.Gemco/Mephisto/: Mephisto.py
Ar.Excel/: Eexcel_Unlocker Pro.py  Excel_Protector_v3.py  README. Eexcel_Unlocker Pro.md  README.excel_protector_v3.md
Ar.Excel/Chaveiro/: Excel Unlocker Pro v2.0.py  excel_unlocker Pro v3.0.py
Ar.Excel/excel_protect/: excel_protector.py  excel_protector_v3_com_logs.py  excel_protector_v3_final.py
Diretrizes AI/: architecture0.1.md  architecture0.2.md  manual.md
NF_CTE/: CTe_RelXml.py  INSTALL.md  NFe.Excel_3.0.py  conversor_xmls.py
